src/objects/InvoiceItem__x.object
<CustomObject>
    <description>Invoice Line Items from Kenan FX</description>
    <externalDataSource>Kenan_FX_Connection</externalDataSource>
    <externalName>InvoiceItem</externalName>
    <fields>
        <fullName>InvoiceHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Header</label>
        <referenceTo>UM_InvoiceHeader__c</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <description>The combination of the BillRef and BillRefResets fields separated by the default delimiter. This must be populated in the KenanInvoiceDetailMapper Class.</description>
        <externalDeveloperName>invoiceNumber</externalDeveloperName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <externalDeveloperName>Invoice</externalDeveloperName>
        <label>Invoice</label>
        <length>255</length>
        <referenceTargetField>UM_InvoiceHeader__c.UM_InvoiceNumber__c</referenceTargetField>
        <referenceTo>UM_InvoiceHeader__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Maximum_Amount__c</fullName>
        <externalDeveloperName>maxAmount</externalDeveloperName>
        <label>Maximum Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Amount__c</fullName>
        <externalDeveloperName>minAmount</externalDeveloperName>
        <label>Minimum Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>service</externalDeveloperName>
        <label>Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Tax__c</fullName>
        <description>stateTax</description>
        <externalDeveloperName>State Tax</externalDeveloperName>
        <label>stateTax</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accountExternalIdType__c</fullName>
        <description>accountExternalIdType</description>
        <externalDeveloperName>accountExternalIdType</externalDeveloperName>
        <label>Account External Id Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accountExternalId__c</fullName>
        <description>accountExternalId</description>
        <externalDeveloperName>accountExternalId</externalDeveloperName>
        <label>Account External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountInternalId__c</fullName>
        <description>accountInternalId</description>
        <externalDeveloperName>accountInternalId</externalDeveloperName>
        <label>Account Internal Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acctExternalIdType__c</fullName>
        <externalDeveloperName>acctExternalIdType</externalDeveloperName>
        <label>Billing Account Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acctExternalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>acctExternalId</externalDeveloperName>
        <inlineHelpText>The Billing Account Related to this Invoice. This is used for Invoice Search</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>aggrUsageId__c</fullName>
        <description>aggrUsageId</description>
        <externalDeveloperName>aggrUsageId</externalDeveloperName>
        <label>aggrUsageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amountReductionId__c</fullName>
        <description>amountReductionId</description>
        <externalDeveloperName>amountReductionId</externalDeveloperName>
        <label>Amount Reduction Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amountReduction__c</fullName>
        <description>amountReduction</description>
        <externalDeveloperName>amountReduction</externalDeveloperName>
        <label>Amount Reduction</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amount__c</fullName>
        <description>amount</description>
        <externalDeveloperName>amount</externalDeveloperName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>annotation__c</fullName>
        <description>annotation</description>
        <externalDeveloperName>annotation</externalDeveloperName>
        <label>Annotation</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>archFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>archFlag</description>
        <externalDeveloperName>archFlag</externalDeveloperName>
        <label>Archive Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>auxTaxInfo__c</fullName>
        <description>auxTaxInfo</description>
        <externalDeveloperName>auxTaxInfo</externalDeveloperName>
        <label>Aux Tax Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billClass__c</fullName>
        <description>billClass</description>
        <externalDeveloperName>billClass</externalDeveloperName>
        <label>Bill Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billInvoiceRow__c</fullName>
        <description>billInvoiceRow</description>
        <externalDeveloperName>billInvoiceRow</externalDeveloperName>
        <label>Bill Invoice Row</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>billRefNo__c</fullName>
        <description>billRefNo</description>
        <externalDeveloperName>billRefNo</externalDeveloperName>
        <label>Bill Ref Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billRefResets__c</fullName>
        <description>billRefResets</description>
        <externalDeveloperName>billRefResets</externalDeveloperName>
        <label>Bill Ref Resets</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billSequenceNum__c</fullName>
        <description>billSequenceNum</description>
        <externalDeveloperName>billSequenceNum</externalDeveloperName>
        <label>Bill Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>billingCategory__c</fullName>
        <description>billingCategory</description>
        <externalDeveloperName>billingCategory</externalDeveloperName>
        <label>Billing Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingLevel__c</fullName>
        <description>billingLevel</description>
        <externalDeveloperName>billingLevel</externalDeveloperName>
        <label>Billing Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>brevRcvCostCtr__c</fullName>
        <description>brevRcvCostCtr</description>
        <externalDeveloperName>brevRcvCostCtr</externalDeveloperName>
        <label>B Rev Rcv Cost Ctr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cityTax__c</fullName>
        <description>cityTax</description>
        <externalDeveloperName>cityTax</externalDeveloperName>
        <label>City Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>componentId__c</fullName>
        <description>componentId</description>
        <externalDeveloperName>componentId</externalDeveloperName>
        <label>Component Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>countyTax__c</fullName>
        <description>countyTax</description>
        <externalDeveloperName>countyTax</externalDeveloperName>
        <label>County Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currencyCode__c</fullName>
        <description>currencyCode</description>
        <externalDeveloperName>currencyCode</externalDeveloperName>
        <label>Currency Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>descriptionCode__c</fullName>
        <description>descriptionCode</description>
        <externalDeveloperName>descriptionCode</externalDeveloperName>
        <label>Description Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>descriptionGroup__c</fullName>
        <description>descriptionGroup</description>
        <externalDeveloperName>descriptionGroup</externalDeveloperName>
        <label>Description Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>descriptionText__c</fullName>
        <description>descriptionText</description>
        <externalDeveloperName>descriptionText</externalDeveloperName>
        <label>Description Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>discountId__c</fullName>
        <description>discountId</description>
        <externalDeveloperName>discountId</externalDeveloperName>
        <label>Discount Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>discount__c</fullName>
        <description>discount</description>
        <externalDeveloperName>discount</externalDeveloperName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>elementId__c</fullName>
        <description>elementId</description>
        <externalDeveloperName>elementId</externalDeveloperName>
        <label>Element Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>equipStatus__c</fullName>
        <description>equipStatus</description>
        <externalDeveloperName>equipStatus</externalDeveloperName>
        <label>Equip Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>federalTax__c</fullName>
        <description>federalTax</description>
        <externalDeveloperName>federalTax</externalDeveloperName>
        <label>Federal Tax</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fromDate__c</fullName>
        <description>fromDate</description>
        <externalDeveloperName>fromDate</externalDeveloperName>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geocode__c</fullName>
        <description>geocode</description>
        <externalDeveloperName>geocode</externalDeveloperName>
        <label>Geocode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inclusiveTax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>inclusiveTax</description>
        <externalDeveloperName>inclusiveTax</externalDeveloperName>
        <label>Inclusive Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>languageCode__c</fullName>
        <description>languageCode</description>
        <externalDeveloperName>languageCode</externalDeveloperName>
        <label>Language Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lobId__c</fullName>
        <description>lobId</description>
        <externalDeveloperName>lobId</externalDeveloperName>
        <label>lobId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>miscNumber1__c</fullName>
        <description>miscNumber1</description>
        <externalDeveloperName>miscNumber1</externalDeveloperName>
        <label>miscNumber1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>miscNumber2__c</fullName>
        <description>miscNumber2</description>
        <externalDeveloperName>miscNumber2</externalDeveloperName>
        <label>miscNumber2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>openItemId__c</fullName>
        <description>openItemId</description>
        <externalDeveloperName>openItemId</externalDeveloperName>
        <label>Open Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherTax__c</fullName>
        <description>otherTax</description>
        <externalDeveloperName>otherTax</externalDeveloperName>
        <label>Other Tax</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>packageId__c</fullName>
        <description>packageId</description>
        <externalDeveloperName>packageId</externalDeveloperName>
        <label>Package Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pcmActiveDt__c</fullName>
        <description>pcmActiveDt</description>
        <externalDeveloperName>pcmActiveDt</externalDeveloperName>
        <label>pcmActiveDt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>prepSequence__c</fullName>
        <description>prepSequence</description>
        <externalDeveloperName>prepSequence</externalDeveloperName>
        <label>prepSequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>processNum__c</fullName>
        <description>processNum</description>
        <externalDeveloperName>processNum</externalDeveloperName>
        <label>processNum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productLineId__c</fullName>
        <description>productLineId</description>
        <externalDeveloperName>productLineId</externalDeveloperName>
        <label>productLineId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>profileId__c</fullName>
        <description>profileId</description>
        <externalDeveloperName>profileId</externalDeveloperName>
        <label>profileId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prorateCode__c</fullName>
        <description>prorateCode</description>
        <externalDeveloperName>prorateCode</externalDeveloperName>
        <label>prorateCode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>providerId__c</fullName>
        <description>providerId</description>
        <externalDeveloperName>providerId</externalDeveloperName>
        <label>providerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rateCurrencyCode__c</fullName>
        <description>rateCurrencyCode</description>
        <externalDeveloperName>rateCurrencyCode</externalDeveloperName>
        <label>Rate Currency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ratePeriod__c</fullName>
        <description>ratePeriod</description>
        <externalDeveloperName>ratePeriod</externalDeveloperName>
        <label>Rate Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rateType__c</fullName>
        <description>rateType</description>
        <externalDeveloperName>rateType</externalDeveloperName>
        <label>Rate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ratedAmount__c</fullName>
        <description>ratedAmount</description>
        <externalDeveloperName>ratedAmount</externalDeveloperName>
        <label>Rated Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>revRcvCostCtr__c</fullName>
        <description>revRcvCostCtr</description>
        <externalDeveloperName>revRcvCostCtr</externalDeveloperName>
        <label>revRcvCostCtr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>secondaryAmount__c</fullName>
        <description>secondaryAmount</description>
        <externalDeveloperName>secondaryAmount</externalDeveloperName>
        <label>Secondary Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>serverId__c</fullName>
        <description>serverId</description>
        <externalDeveloperName>serverId</externalDeveloperName>
        <label>serverId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceExternalIdType__c</fullName>
        <externalDeveloperName>serviceExternalIdType</externalDeveloperName>
        <label>serviceExternalIdType</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>serviceExternalId__c</fullName>
        <description>serviceExternalId</description>
        <externalDeveloperName>serviceExternalId</externalDeveloperName>
        <label>serviceExternalId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceInternalIdResets__c</fullName>
        <description>serviceInternalIdResets</description>
        <externalDeveloperName>serviceInternalIdResets</externalDeveloperName>
        <label>serviceInternalIdResets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>serviceInternalId__c</fullName>
        <description>serviceInternalId</description>
        <externalDeveloperName>serviceInternalId</externalDeveloperName>
        <label>serviceInternalId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>shortDescriptionText__c</fullName>
        <description>shortDescriptionText</description>
        <externalDeveloperName>shortDescriptionText</externalDeveloperName>
        <label>Short Description Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>statementDate__c</fullName>
        <description>statementDate</description>
        <externalDeveloperName>statementDate</externalDeveloperName>
        <label>Statement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>subtypeCode__c</fullName>
        <description>subtypeCode</description>
        <externalDeveloperName>subtypeCode</externalDeveloperName>
        <label>Sub Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>taxPkgInstId__c</fullName>
        <description>taxPkgInstId</description>
        <externalDeveloperName>taxPkgInstId</externalDeveloperName>
        <label>taxPkgInstId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>taxRate__c</fullName>
        <description>taxRate</description>
        <externalDeveloperName>taxRate</externalDeveloperName>
        <label>Tax Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>taxTypeCode__c</fullName>
        <description>taxTypeCode</description>
        <externalDeveloperName>taxTypeCode</externalDeveloperName>
        <label>Tax Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tax__c</fullName>
        <description>tax</description>
        <externalDeveloperName>tax</externalDeveloperName>
        <label>Tax</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>toDate__c</fullName>
        <description>toDate</description>
        <externalDeveloperName>toDate</externalDeveloperName>
        <label>To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trackingDate__c</fullName>
        <description>trackingDate</description>
        <externalDeveloperName>trackingDate</externalDeveloperName>
        <label>Tracking Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trackingIdServ__c</fullName>
        <description>trackingIdServ</description>
        <externalDeveloperName>trackingIdServ</externalDeveloperName>
        <label>trackingIdServ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trackingId__c</fullName>
        <description>trackingId</description>
        <externalDeveloperName>trackingId</externalDeveloperName>
        <label>Tracking Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transDate__c</fullName>
        <description>transDate</description>
        <externalDeveloperName>transDate</externalDeveloperName>
        <label>Trans Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>typeCode__c</fullName>
        <description>typeCode</description>
        <externalDeveloperName>typeCode</externalDeveloperName>
        <label>Charge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>units__c</fullName>
        <description>units</description>
        <externalDeveloperName>units</externalDeveloperName>
        <label>Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoneClass__c</fullName>
        <description>zoneClass</description>
        <externalDeveloperName>zoneClass</externalDeveloperName>
        <label>Zone Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invoice Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Invoice Items</pluralLabel>
</CustomObject>